[gd_scene load_steps=8 format=3 uid="uid://ckeq2txdd8wa6"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_yx22t"]
[ext_resource type="Script" path="res://scripts/Input_Player.gd" id="2_exjmq"]
[ext_resource type="Texture2D" uid="uid://ctnrbedpqm14s" path="res://Sprites/Ships/Untitled - 15 January 2025 18.56.13.png" id="3_cd0os"]
[ext_resource type="Texture2D" uid="uid://c3mgpxa6f8nd1" path="res://Sprites/Tiles/tile_0006.png" id="4_c87fl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ksshm"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:player_name")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:player_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("InputSynchronizer:throttle")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("InputSynchronizer:turn")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("InputSynchronizer:shoot")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:rotation")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:cur_weapon_heat")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath(".:max_weapon_heat")
properties/8/spawn = true
properties/8/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rhmsu"]
radius = 3.0
height = 24.0

[sub_resource type="Curve" id="Curve_y5xx1"]
_data = [Vector2(0.00381678, 0.00377357), 0.0, 0.0, 0, 0, Vector2(0.99999, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 0
script = ExtResource("1_yx22t")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ksshm")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ksshm")
script = ExtResource("2_exjmq")

[node name="sprite" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_cd0os")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_rhmsu")

[node name="shade" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.243137)
z_index = 2
position = Vector2(0, 15)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_cd0os")

[node name="muzzle" type="Node2D" parent="."]
position = Vector2(0, -13)

[node name="respawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="hitParticles" type="CPUParticles2D" parent="."]
z_index = 3
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
texture = ExtResource("4_c87fl")
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 0)
angle_max = 486.5
scale_amount_min = 1.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_y5xx1")

[connection signal="timeout" from="respawnTimer" to="." method="respawn"]
